--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -237,7 +237,7 @@ li div {
     margin-right: 1rem;
  }
 
- .inputsLogin input {
+ .inputsLogin input  {
      border: none;
      border-radius: 0.6rem;
      background-color: white;
@@ -248,6 +248,15 @@ li div {
      height: 3rem;
      
      font-size: 1.4rem;
+
+ }
+
+ .inputsLogin input:focus {
+     border: 2px solid #0CCBDE;
+ }
+
+ .inputsLogin #inputUsername, #inputEmail {
+     text-transform: lowercase;
  }
 
  .buttonLogin button {
@@ -264,6 +273,12 @@ li div {
      font-size: 1.4rem;
      font-weight: bold;
 
+     transition: background .3s;
+
+ }
+
+ .buttonLogin button:hover {
+    background-color: #0CCBDE
  }
 
 .signUp a {
