--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Lista de Tarefas onde o usuário cadastrado pode adicionar e remover tarefas, bem como acessá-las em qualquer lugar">
     <link rel="icon"  href="/public/assets/imagens/favicon.ico">
     <link rel="stylesheet" href="/public/assets/style.css">
     <title>Lista de Tarefas</title>
@@ -12,7 +13,7 @@
 <body>
     <!-- PARTE 2 -->
     <header>
-        <img src="../public/assets/imagens/logo.svg" width="70px" height="auto" alt="">
+        <img src="../public/assets/imagens/logo.svg" width="70px" height="auto" alt="Logo da Lista de Tarefas">
         <h1>Lista de Tarefas</h1>
     </header>
 
@@ -31,20 +32,20 @@
                 <% if (messages.error) { %>
                     <p><%= messages.error %></p>
                   <% } %>
-                            <form action="/" method="post">
+                <form action="/" method="post">
                     <div class="inputsLogin">            
                         <label for="username">Nome de usuário</label>
-                        <input id="inputUsernameLogin" name="username" type="text" required>
+                        <input id="inputUsernameLogin" name="username" type="text" aria-label="Digitar nome de usuário" required>
         
                         <label for="senha">Senha</label>
-                        <input type="password" name="password" id="inputPasswordLogin" required>    
+                        <input type="password" name="password" id="inputPasswordLogin" aria-label="Digitar senha" required>    
                     </div>
                     <div class="buttonLogin">
                         <label for="entrar"></label>
-                        <button type="submit" id="loginButton">Entrar</button>    
+                        <button type="submit" id="loginButton" aria-label="Fazer login">Entrar</button>    
                     </div>
                     <div class="signUp">
-                        <a href="/signUp">Não tem uma conta? <b>Registre-se</b></a>
+                        <p>Não tem uma conta? <a href="/signUp"><b>Registre-se</b></a></p>
                     </div>
                 </form>
             </div>    
