--- a/views/tarefas.ejs
+++ b/views/tarefas.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Lista de Tarefas onde o usuário cadastrado pode adicionar e remover tarefas, bem como acessá-las em qualquer lugar">
     <link rel="icon"  href="/public/assets/imagens/favicon.ico">
     <link rel="stylesheet" href="/public/assets/style.css">
     <title>Lista de Tarefas | Tarefas</title>
@@ -12,7 +13,7 @@
 <body>
         <!-- PARTE 4 -->
         <header>
-            <img src="../public/assets/imagens/logo.svg" width="70px" height="auto" alt="">
+            <img src="../public/assets/imagens/logo.svg" width="70px" height="auto" alt="Logo da Lista de Tarefas">
             <h1>Lista de Tarefas</h1>
         </header>
     
@@ -27,8 +28,8 @@
                 <div class="novaTarefa2">
                     <h2>Nova Tarefa</h2>
                     <div class="inputs">
-                        <input name="inputTarefa" id="inputNovaTarefa" type="text" placeholder="✍️  Escreva aqui sua tarefa...">
-                        <input id="btnNovaTarefa" type="submit" value="+">    
+                        <input name="inputTarefa" id="inputNovaTarefa" type="text" placeholder="✍️  Escreva aqui sua tarefa..." aria-label="Digitar tarefa">
+                        <input id="btnNovaTarefa" type="submit" value="+" aria-label="Adicionar tarefa">    
                     </div>
                 </div>
             </section>
