--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon"  href="/public/assets/imagens/favicon.ico">
-    <title>Document</title>
+    <title>Erro</title>
 </head>
 <body>
     <h1>Opa, parece que houve um erro!</h1>
