--- a/views/registrar.ejs
+++ b/views/registrar.ejs
@@ -17,13 +17,7 @@
         <h1>Lista de Tarefas</h1>
     </header>
 
-    <main class="container">
-        <div class="div-container">
-            <h2>Sobre a Lista de Tarefas</h2>
-            <p>O intuito desta página é que os usuários possam adicionar ou remover tarefas que ficarão armazenadas numa lista, e poderão marcá-las como concluída</p>
-            <p>Para adicionar a primeira tarefa vá até <b>Tarefas</b></p>
-        </div>
-    </main>
+    <%- include('partials/main') %>
     <section class="container">
         <div class="div-container">
             <h3>Registre-se</h3>
