--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,13 +18,7 @@
     </header>
 
     <!-- PARTE 3 -->
-    <main class="container">
-        <div class="div-container">
-            <h2>Sobre a Lista de Tarefas</h2>
-            <p>O intuito desta página é que os usuários possam adicionar ou remover tarefas que ficarão armazenadas numa lista, e poderão marcá-las como concluída</p>
-            <p>Para adicionar a primeira tarefa vá até <b>Tarefas</b></p>
-        </div>
-    </main>
+    <%- include('partials/main') %>
     <section class="container">
         <div class="div-container">
             <h3>Faça login</h3>
